Skywash-main/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skywash
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: skywash.<your-subdomain>.cirrus.ucar.edu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: skywash
                port:
                  number: 80
